Fix some spacing and add some translation strings and remove an unneeded bit of CSS

--- a/public/stylesheets/site/2.0/13-group-blurb.css
+++ b/public/stylesheets/site/2.0/13-group-blurb.css
@@ -323,7 +323,7 @@ eg collections, users, skins, instead of the 4-icon list
 	min-height: 30px;
 }
 
-.bookmark .user .datetime, .bookmark .short .datetime {
+.bookmark .user .datetime {
 	top: 0;
 }
 
